[package]
name = "raft-engine"
version = "0.4.2"
authors = ["The TiKV Project Developers"]
edition = "2024"
rust-version = "1.92.0"
description = "A persistent storage engine for Multi-Raft logs"
readme = "README.md"
repository = "https://github.com/tikv/raft-engine"
license = "Apache-2.0"

[package.metadata.docs.rs]
features = ["internals"]

[[example]]
name = "append-compact-purge"
path = "examples/append_compact_purge.rs"

[[example]]
name = "raft-engine-fork"
path = "examples/fork.rs"

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["internals", "failpoints"]

[[bench]]
name = "benches"
path = "tests/benches/mod.rs"
harness = false
required-features = ["failpoints"]

[dependencies]
byteorder = "1.5"
crc32fast = "1.4"
crossbeam = "0.8"
fail = "0.5"
fs2 = "0.4"
hashbrown = "0.16"
hex = "0.4"
if_chain = "1.0"
lazy_static = "1.5"
libc = "0.2"
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
bytes = "1"
lz4-sys = "1.11"
memmap2 = { version = "0.9", optional = true }
nix = { version = "0.30", features = ["fs", "uio"] }
num-derive = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
prometheus = "0.14"
prometheus-static-metric = "0.5"
prost = "0.14"
rayon = "1.10"
rhai = { version = "1.20", features = ["sync"], optional = true }
scopeguard = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.8"
ctor = "0.6"
env_logger = "0.11"
# Commented out for Nix vendoring - uncomment for local testing
# raft = { path = "../raft-rs", default-features = false, features = [
#   "prost-codec",
# ] }
rand = "0.9"
rand_distr = "0.5"
tempfile = "3"
toml = "0.9"

[features]
default = ["internals", "scripting"]
internals = []
nightly = ["prometheus/nightly"]
failpoints = ["fail/failpoints"]
scripting = ["rhai"]
swap = ["nightly", "memmap2"]
std_fs = []

nightly_group = ["nightly", "swap"]

# Workspace members removed for Nix vendoring - they have path dependencies
# [workspace]
# members = ["stress", "ctl"]
