[package]
name = "raft-engine-ctl"
version = "0.4.2"
authors = ["The TiKV Project Developers"]
edition = "2024"
rust-version = "1.92.0"
description = "A control tool for Raft Engine"
repository = "https://github.com/tikv/raft-engine"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
env_logger = "0.11"
raft-engine = { path = "..", version = "0.4.2", features = [
    "scripting",
    "internals",
] }
