[package]
name = "stress"
version = "0.4.2"
authors = ["The TiKV Authors"]
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
const_format = "0.2"
hdrhistogram = "7"
num-traits = "0.2"
parking_lot_core = "0.9"
raft = { path = "../../raft-rs", default-features = false, features = ["prost-codec"] }
raft-engine = { path = "..", features = ["internals"] }
rand = "0.9"
rand_distr = "0.5"
statistical = "1.0"
